@@ -19,95 +19,90 @@ along with Game Theoretic Library.  If not, see <http://www.gnu.org/licenses/>.*
 
 package cz.agents.gtlibrary.domain.poker;
 
+import cz.agents.gtlibrary.algorithms.sequenceform.refinements.quasiperfect.numbers.Rational;
+import cz.agents.gtlibrary.iinodes.ArrayListSequenceImpl;
+import cz.agents.gtlibrary.iinodes.GameStateImpl;
+import cz.agents.gtlibrary.iinodes.ISKey;
+import cz.agents.gtlibrary.iinodes.PerfectRecallISKey;
+import cz.agents.gtlibrary.interfaces.Player;
+import org.apache.commons.lang3.builder.HashCodeBuilder;
+
 import java.util.Arrays;
 import java.util.Iterator;
 import java.util.LinkedList;
 
-import cz.agents.gtlibrary.algorithms.sequenceform.refinements.quasiperfect.numbers.Rational;
-
-import cz.agents.gtlibrary.iinodes.ISKey;
-import cz.agents.gtlibrary.iinodes.PerfectRecallISKey;
-import org.apache.commons.lang3.builder.HashCodeBuilder;
-
-import cz.agents.gtlibrary.iinodes.ArrayListSequenceImpl;
-import cz.agents.gtlibrary.iinodes.GameStateImpl;
-import cz.agents.gtlibrary.interfaces.Player;
-import cz.agents.gtlibrary.interfaces.Sequence;
-import cz.agents.gtlibrary.utils.Pair;
-
 public abstract class PokerGameState extends GameStateImpl {
 
-	private static final long serialVersionUID = 1768690890035774941L;
+    private static final long serialVersionUID = 1768690890035774941L;
 
-	protected LinkedList<PokerAction> sequenceForAllPlayers;
+    protected LinkedList<PokerAction> sequenceForAllPlayers;
 
-	protected PokerAction[] playerCards;
-	protected ISKey cachedISKey = null;
+    protected PokerAction[] playerCards;
+    protected ISKey cachedISKey = null;
 
-	protected int round;
-	protected int pot;
-	protected int currentPlayerIndex;
-	protected int gainForFirstPlayer;
-	protected int hash = -1;
+    protected int round;
+    protected int pot;
+    protected int currentPlayerIndex;
+    protected int gainForFirstPlayer;
+    protected int hash = -1;
 
-	protected double[] utilities;
-	
-	private final double coef = 1;
+    protected double[] utilities;
 
-	public PokerGameState(Player[] players, int ante) {
-		super(players);
-		this.playerCards = new PokerAction[2];
-		this.sequenceForAllPlayers = new LinkedList<PokerAction>();
-		this.pot = 2 * ante;
-		this.round = 0;
-		this.gainForFirstPlayer = ante;
-		this.currentPlayerIndex = 2;
-	}
+    private final double coef = 1;
 
-	@SuppressWarnings("unchecked")
-	public PokerGameState(PokerGameState gameState) {
-		super(gameState);
-		this.sequenceForAllPlayers = (LinkedList<PokerAction>) gameState.sequenceForAllPlayers.clone();
-		this.playerCards = gameState.playerCards.clone();
-		this.pot = gameState.pot;
-		this.round = gameState.round;
-		this.currentPlayerIndex = gameState.currentPlayerIndex;
-		this.gainForFirstPlayer = gameState.gainForFirstPlayer;
-	}
-	
+    public PokerGameState(Player[] players, int ante) {
+        super(players);
+        this.playerCards = new PokerAction[2];
+        this.sequenceForAllPlayers = new LinkedList<PokerAction>();
+        this.pot = 2 * ante;
+        this.round = 0;
+        this.gainForFirstPlayer = ante;
+        this.currentPlayerIndex = 2;
+    }
 
-	protected abstract int getTerminalRound();
+    @SuppressWarnings("unchecked")
+    public PokerGameState(PokerGameState gameState) {
+        super(gameState);
+        this.sequenceForAllPlayers = (LinkedList<PokerAction>) gameState.sequenceForAllPlayers.clone();
+        this.playerCards = gameState.playerCards.clone();
+        this.pot = gameState.pot;
+        this.round = gameState.round;
+        this.currentPlayerIndex = gameState.currentPlayerIndex;
+        this.gainForFirstPlayer = gameState.gainForFirstPlayer;
+    }
 
-	/**
-	 * 
-	 * @return 1 if players[0] won, -1 if players[1] won, 0 if tie
-	 */
-	protected abstract int hasPlayerOneWon();
 
-	protected abstract int getValueOfAggressive(PokerAction action);
-	
-	protected abstract int getValueOfCall();
-	
-	public abstract void attendCard(PokerAction action);
+    protected abstract int getTerminalRound();
 
-	@Override
-	public double[] getUtilities() {
-		if (utilities != null) {
-			return utilities;
-		}
-		if (isGameEnd()) {
-			int result = hasPlayerOneWon();
+    /**
+     * @return 1 if players[0] won, -1 if players[1] won, 0 if tie
+     */
+    protected abstract int hasPlayerOneWon();
 
-			if (result > 0)
-				utilities = new double[] { coef*gainForFirstPlayer, -coef*gainForFirstPlayer, 0 };
-			else if (result == 0)
-				utilities = new double[] { 0, 0, 0 };
-			else
-				utilities = new double[] { coef*(gainForFirstPlayer - pot), coef*(pot - gainForFirstPlayer), 0 };
-			return utilities;
-		}
-		return new double[] { 0 };
-	}
+    protected abstract int getValueOfAggressive(PokerAction action);
+
+    protected abstract int getValueOfCall();
+
+    public abstract void attendCard(PokerAction action);
+
+    @Override
+    public double[] getUtilities() {
+        if (utilities != null) {
+            return utilities;
+        }
+        if (isGameEnd()) {
+            int result = hasPlayerOneWon();
+
+            if (result > 0)
+                utilities = new double[]{coef * gainForFirstPlayer, -coef * gainForFirstPlayer, 0};
+            else if (result == 0)
+                utilities = new double[]{0, 0, 0};
+            else
+                utilities = new double[]{coef * (gainForFirstPlayer - pot), coef * (pot - gainForFirstPlayer), 0};
+            return utilities;
+        }
+        return new double[]{0};
+    }
 
     @Override
     public Rational[] getExactUtilities() {
@@ -116,11 +111,11 @@ public abstract class PokerGameState extends GameStateImpl {
             int result = hasPlayerOneWon();
 
             if (result > 0)
-                exactUtilities = new Rational[] { new Rational(gainForFirstPlayer), new Rational(-gainForFirstPlayer), Rational.ZERO };
+                exactUtilities = new Rational[]{new Rational(gainForFirstPlayer), new Rational(-gainForFirstPlayer), Rational.ZERO};
             else if (result == 0)
-                exactUtilities = new Rational[] { Rational.ZERO, Rational.ZERO, Rational.ZERO };
+                exactUtilities = new Rational[]{Rational.ZERO, Rational.ZERO, Rational.ZERO};
             else
-                exactUtilities = new Rational[] { new Rational(gainForFirstPlayer - pot), new Rational(pot - gainForFirstPlayer), Rational.ZERO };
+                exactUtilities = new Rational[]{new Rational(gainForFirstPlayer - pot), new Rational(pot - gainForFirstPlayer), Rational.ZERO};
             double[] utilities = getUtilities();
 
             for (int i = 0; i < exactUtilities.length; i++) {
@@ -128,305 +123,312 @@ public abstract class PokerGameState extends GameStateImpl {
             }
             return exactUtilities;
         }
-        return new Rational[] { Rational.ZERO };
+        return new Rational[]{Rational.ZERO};
     }
 
 
     @Override
-	public Player getPlayerToMove() {
-		return players[currentPlayerIndex];
-	}
+    public Player getPlayerToMove() {
+        return players[currentPlayerIndex];
+    }
 
-	@Override
-	public boolean isPlayerToMoveNature() {
-		return currentPlayerIndex == 2;
-	}
+    @Override
+    public boolean isPlayerToMoveNature() {
+        return currentPlayerIndex == 2;
+    }
 
-	protected void dealCardToPlayer(PokerAction action) {
-		if (playerCards[0] == null) {
-			playerCards[0] = action;
-		} else {
-			playerCards[1] = action;
-			increaseRound();
-			currentPlayerIndex = 0;
-		}
-	}
+    protected void dealCardToPlayer(PokerAction action) {
+        if (playerCards[0] == null) {
+            playerCards[0] = action;
+        } else {
+            playerCards[1] = action;
+            increaseRound();
+            currentPlayerIndex = 0;
+        }
+    }
 
-	protected void increaseRound() {
-		round++;
-	}
+    protected void increaseRound() {
+        round++;
+    }
 
-	public int getRound() {
-		return round;
-	}
+    public int getRound() {
+        return round;
+    }
 
-	public PokerAction[] getPlayerCards() {
-		return playerCards;
-	}
+    public PokerAction[] getPlayerCards() {
+        return playerCards;
+    }
 
-	public int getPot() {
-		return pot;
-	}
+    public int getPot() {
+        return pot;
+    }
 
-	public int getGainForFirstPlayer() {
-		return gainForFirstPlayer;
-	}
+    public int getGainForFirstPlayer() {
+        return gainForFirstPlayer;
+    }
 
-	public LinkedList<PokerAction> getSequenceForAllPlayers() {
-		return sequenceForAllPlayers;
-	}
+    public LinkedList<PokerAction> getSequenceForAllPlayers() {
+        return sequenceForAllPlayers;
+    }
 
-	protected boolean isFirstMoveInRound() {
-		return sequenceForAllPlayers.isEmpty() || lastMovePlayedByNature();
-	}
+    protected boolean isFirstMoveInRound() {
+        return sequenceForAllPlayers.isEmpty() || isFirstPlayerAfterNature();
+    }
 
-	protected boolean lastMovePlayedByNature() {
-		return sequenceForAllPlayers.getLast().getPlayer().equals(players[2]);
-	}
+    protected boolean firstMoveOfPlayerToMove() {
+        return sequenceForAllPlayers.size() <= 1 && !isPlayerToMoveNature();
+    }
 
-	protected boolean isLastMoveAggressive() {
-		return sequenceForAllPlayers.getLast().getActionType().equals("b") || sequenceForAllPlayers.getLast().getActionType().equals("r");
-	}
+    protected boolean isLastMoveAggressive() {
+        return sequenceForAllPlayers.getLast().getActionType().equals("b") || sequenceForAllPlayers.getLast().getActionType().equals("r");
+    }
 
-	protected boolean isFirstPlayerAfterNature() {
-		return sequenceForAllPlayers.getLast().getPlayer().equals(players[2]);
-	}
+    protected boolean isFirstPlayerAfterNature() {
+        return sequenceForAllPlayers.getLast().getPlayer().equals(players[2]);
+    }
 
-	protected void addActionToSequence(PokerAction action) {
-		utilities = null;
-		sequenceForAllPlayers.add(action);
-	}
+    protected void addActionToSequence(PokerAction action) {
+        utilities = null;
+        sequenceForAllPlayers.add(action);
+    }
 
-	protected void clearCachedValues() {
-		hash = -1;
-		cachedISKey = null;
-	}
+    protected void clearCachedValues() {
+        hash = -1;
+        cachedISKey = null;
+    }
 
-	public void check(PokerAction action) {
-		if (isCheckValid()) {
-			clearCachedValues();
-			if (isLastMoveCheck()) {
-				increaseRound();
-			}
-			addActionToSequence(action);
-			switchPlayers();
-		}
-	}
+    public void check(PokerAction action) {
+        if (isCheckValid()) {
+            clearCachedValues();
+            if (isLastMoveCheck()) {
+                increaseRound();
+            }
+            addActionToSequence(action);
+            switchPlayers();
+        } else {
+            throw new UnsupportedOperationException("invalid action");
+        }
+    }
 
-	private boolean isLastMoveCheck() {
-		return sequenceForAllPlayers.size() > 0 && sequenceForAllPlayers.getLast().getActionType().equals("ch");
-	}
+    private boolean isLastMoveCheck() {
+        return sequenceForAllPlayers.size() > 0 && sequenceForAllPlayers.getLast().getActionType().equals("ch");
+    }
 
-	private boolean isCheckValid() {
-		return isRoundForRegularPlayers() && (isFirstMoveInRound() || isLastMoveCheck());
-	}
+    private boolean isCheckValid() {
+        return isRoundForRegularPlayers() && (isFirstMoveInRound() || isLastMoveCheck());
+    }
 
-	public void bet(PokerAction action) {
-		if (isBetOrCheckValid()) {
-			clearCachedValues();
-			addToPot(getValueOfAggressive(action));
-			addActionToSequence(action);
-			switchPlayers();
-		}
-	}
+    public void bet(PokerAction action) {
+        if (isBetOrCheckValid()) {
+            clearCachedValues();
+            addToPot(getValueOfAggressive(action));
+            addActionToSequence(action);
+            switchPlayers();
+        } else {
+            throw new UnsupportedOperationException("invalid action");
+        }
+    }
 
-	private boolean isBetOrCheckValid() {
-		return (isFirstMoveInRound() || isLastMoveCheck()) && isRoundForRegularPlayers();
-	}
+    private boolean isBetOrCheckValid() {
+        return (isFirstMoveInRound() || isLastMoveCheck()) && isRoundForRegularPlayers();
+    }
 
-	private boolean isRoundForRegularPlayers() {
-		return round % 2 == 1;
-	}
+    private boolean isRoundForRegularPlayers() {
+        return round % 2 == 1;
+    }
 
-	protected boolean isCallValid() {
-		return isRoundForRegularPlayers() && isLastMoveAggressive();
-	}
+    protected boolean isCallValid() {
+        return isRoundForRegularPlayers() && isLastMoveAggressive();
+    }
 
-	private boolean isFoldValid() {
-		return isRoundForRegularPlayers() && !sequenceForAllPlayers.isEmpty() && isLastMoveAggressive();
-	}
+    private boolean isFoldValid() {
+        return isRoundForRegularPlayers() && !sequenceForAllPlayers.isEmpty() && isLastMoveAggressive();
+    }
 
-	protected boolean isRaiseValid() {
-		//System.out.println(isRoundForRegularPlayers() && !sequenceForAllPlayers.isEmpty() && isLastMoveAggressive());
-		return isRoundForRegularPlayers() && !sequenceForAllPlayers.isEmpty() && isLastMoveAggressive();
-	}
+    protected boolean isRaiseValid() {
+        //System.out.println(isRoundForRegularPlayers() && !sequenceForAllPlayers.isEmpty() && isLastMoveAggressive());
+        return isRoundForRegularPlayers() && !sequenceForAllPlayers.isEmpty() && isLastMoveAggressive();
+    }
 
-	protected void switchPlayers() {
-		if (round % 2 == 0 && round != getTerminalRound()) {
-			currentPlayerIndex = 2;
-			return;
-		}
-		if (isFirstPlayerAfterNature()) {
-			currentPlayerIndex = 0;
-			return;
-		}
-		currentPlayerIndex = 1 - currentPlayerIndex;
-	}
+    protected void switchPlayers() {
+        if (round % 2 == 0 && round != getTerminalRound()) {
+            currentPlayerIndex = 2;
+            return;
+        }
+        if (isFirstPlayerAfterNature()) {
+            currentPlayerIndex = 0;
+            return;
+        }
+        currentPlayerIndex = 1 - currentPlayerIndex;
+    }
 
-	public void call(PokerAction action) {
-		if (isCallValid()) {
-			clearCachedValues();
-			addToPot(getValueOfCall());
-			addActionToSequence(action);
-			increaseRound();
-			switchPlayers();
-		}
-	}
+    public void call(PokerAction action) {
+        if (isCallValid()) {
+            clearCachedValues();
+            addToPot(getValueOfCall());
+            addActionToSequence(action);
+            increaseRound();
+            switchPlayers();
+        } else {
+            throw new UnsupportedOperationException("invalid action");
+        }
+    }
 
-	public void raise(PokerAction action) {
-		if (isRaiseValid()) {
-			clearCachedValues();
-			addToPot(getValueOfCall() + getValueOfAggressive(action));
-			addActionToSequence(action);
-			switchPlayers();
-		}
-	}
+    public void raise(PokerAction action) {
+        if (isRaiseValid()) {
+            clearCachedValues();
+            addToPot(getValueOfCall() + getValueOfAggressive(action));
+            addActionToSequence(action);
+            switchPlayers();
+        } else {
+            throw new UnsupportedOperationException("invalid action");
+        }
+    }
 
-	public PokerAction getCardForActingPlayer() {
-		if (isPlayerToMoveNature())
-			throw new UnsupportedOperationException("Nature doesn't hold any cards...");
-		return playerCards[currentPlayerIndex];
-	}
-	
-	public PokerAction getCardFor(Player player) {
-		return playerCards[player.getId()];
-	}
+    public PokerAction getCardForActingPlayer() {
+        if (isPlayerToMoveNature())
+            throw new UnsupportedOperationException("Nature doesn't hold any cards...");
+        return playerCards[currentPlayerIndex];
+    }
 
-	@Override
-	public boolean isGameEnd() {
-		return round == getTerminalRound();
-	}
+    public PokerAction getCardFor(Player player) {
+        return playerCards[player.getId()];
+    }
 
-	protected void addToPot(int bet) {
-		//System.out.println("adding to pot : "+bet);
-		pot += bet;
-		if (currentPlayerIndex == 1) {
-			gainForFirstPlayer += bet;
-		}
-	}
-	
-	protected void removeFromPot(int bet) {
-		//System.out.println("removing from pot: "+bet);
-		pot -= bet;
-		if (history.getLastPlayer().getId() == 1) {
-			gainForFirstPlayer -= bet;
-		}
-	}
+    @Override
+    public boolean isGameEnd() {
+        return round == getTerminalRound();
+    }
 
-	public void fold(PokerAction action) {
-		if (isFoldValid()) {
-			clearCachedValues();
-			round = getTerminalRound();
-			addActionToSequence(action);
-			switchPlayers();
-		}
-	}
+    protected void addToPot(int bet) {
+        //System.out.println("adding to pot : "+bet);
+        pot += bet;
+        if (currentPlayerIndex == 1) {
+            gainForFirstPlayer += bet;
+        }
+    }
 
-	@Override
-	public ISKey getISKeyForPlayerToMove() {
-		if (cachedISKey != null)
-			return cachedISKey;
-		if (isPlayerToMoveNature()) {
-			cachedISKey = new PerfectRecallISKey(0, new ArrayListSequenceImpl(history.getSequenceOf(getPlayerToMove())));
-			return cachedISKey;
-		}
+    protected void removeFromPot(int bet) {
+        //System.out.println("removing from pot: "+bet);
+        pot -= bet;
+        if (history.getLastPlayer().getId() == 1) {
+            gainForFirstPlayer -= bet;
+        }
+    }
 
-		HashCodeBuilder hcb = new HashCodeBuilder(17, 31);
-		Iterator<PokerAction> iterator = sequenceForAllPlayers.iterator();
-		int moveNum = 0;
+    public void fold(PokerAction action) {
+        if (isFoldValid()) {
+            clearCachedValues();
+            round = getTerminalRound();
+            addActionToSequence(action);
+            switchPlayers();
+        }
+    }
 
-		hcb.append(playerCards[getPlayerToMove().getId()]);
-		while (iterator.hasNext()) {
-			hcb.append(iterator.next().observableISHash());
-			hcb.append(moveNum++);
-		}
-		cachedISKey = new PerfectRecallISKey(hcb.toHashCode(), history.getSequenceOf(getPlayerToMove()));
-		return cachedISKey;
-	}
+    @Override
+    public ISKey getISKeyForPlayerToMove() {
+        if (cachedISKey != null)
+            return cachedISKey;
+        if (isPlayerToMoveNature()) {
+            cachedISKey = new PerfectRecallISKey(0, new ArrayListSequenceImpl(history.getSequenceOf(getPlayerToMove())));
+            return cachedISKey;
+        }
+
+        HashCodeBuilder hcb = new HashCodeBuilder(17, 31);
+        Iterator<PokerAction> iterator = sequenceForAllPlayers.iterator();
+        int moveNum = 0;
+
+        hcb.append(playerCards[getPlayerToMove().getId()].getActionType());
+        while (iterator.hasNext()) {
+            hcb.append(iterator.next().observableISHash());
+            hcb.append(moveNum++);
+        }
+        cachedISKey = new PerfectRecallISKey(hcb.toHashCode(), history.getSequenceOf(getPlayerToMove()));
+        return cachedISKey;
+    }
 
 
-	@Override
-	public int hashCode() {
-		if (hash == -1)
-			hash = new HashCodeBuilder(17, 31).append(history).toHashCode();
-		return hash;
-	}
+    @Override
+    public int hashCode() {
+//        if (hash == -1)
+            hash = new HashCodeBuilder(17, 31).append(history).toHashCode();
+        return hash;
+    }
 
-	@Override
-	public boolean equals(Object obj) {
-		if (this == obj)
-			return true;
-		if (obj == null)
-			return false;
-		if (getClass() != obj.getClass())
-			return false;
-		PokerGameState other = (PokerGameState) obj;
-		if (currentPlayerIndex != other.currentPlayerIndex)
-			return false;
-		if (gainForFirstPlayer != other.gainForFirstPlayer)
-			return false;
-		if (!Arrays.equals(playerCards, other.playerCards))
-			return false;
-		if (!Arrays.equals(players, other.players))
-			return false;
-		if (pot != other.pot)
-			return false;
-		if (round != other.round)
-			return false;
-		if (sequenceForAllPlayers == null) {
-			if (other.sequenceForAllPlayers != null)
-				return false;
-		} else if (!sequenceForAllPlayers.equals(other.sequenceForAllPlayers))
-			return false;
-		return true;
-	}
+    @Override
+    public boolean equals(Object obj) {
+        if (this == obj)
+            return true;
+        if (obj == null)
+            return false;
+        if (getClass() != obj.getClass())
+            return false;
+        PokerGameState other = (PokerGameState) obj;
+        if (currentPlayerIndex != other.currentPlayerIndex)
+            return false;
+        if (gainForFirstPlayer != other.gainForFirstPlayer)
+            return false;
+        if (!Arrays.equals(playerCards, other.playerCards))
+            return false;
+        if (!Arrays.equals(players, other.players))
+            return false;
+        if (pot != other.pot)
+            return false;
+        if (round != other.round)
+            return false;
+        if (sequenceForAllPlayers == null) {
+            if (other.sequenceForAllPlayers != null)
+                return false;
+        } else if (!sequenceForAllPlayers.equals(other.sequenceForAllPlayers))
+            return false;
+        return true;
+    }
 
-	@Override
-	public String toString() {
-		return history.toString();
-	}
-	
-	@Override
-	public void reverseAction(){
-		
-		PokerAction lastAction = (PokerAction)history.getLastAction();
-		if (!sequenceForAllPlayers.isEmpty() && lastAction.equals(sequenceForAllPlayers.getLast())){
-			
-			sequenceForAllPlayers.removeLast();
-			
-			if (lastAction.getActionType().equals("b")) {
-				reverseBet(lastAction);
-			} else if (lastAction.getActionType().equals("c")) {
-				reverseCall();
-			} else if (lastAction.getActionType().equals("ch")) {
-				reverseCheck();
-			} else if (lastAction.getActionType().equals("r")) {
-				reverseRaise(lastAction);
-			}		
-		}
-		clearCachedValues();
-		currentPlayerIndex = history.getLastPlayer().getId();
-		super.reverseAction();
-	}
+    @Override
+    public String toString() {
+        return history.toString();
+    }
 
-	private void reverseRaise(PokerAction lastAction) {
-		removeFromPot(getValueOfCall() + getValueOfAggressive(lastAction));
-	}
+    @Override
+    public void reverseAction() {
 
-	private void reverseCheck() {
-		if(sequenceForAllPlayers.size() > 0 && sequenceForAllPlayers.get(sequenceForAllPlayers.size()-1).getActionType().equals("ch"))
-			round--;
-	}
+        PokerAction lastAction = (PokerAction) history.getLastAction();
+        if (!sequenceForAllPlayers.isEmpty() && lastAction.equals(sequenceForAllPlayers.getLast())) {
 
-	private void reverseCall() {
-		removeFromPot(getValueOfCall());
-		round--;
-	}
+            sequenceForAllPlayers.removeLast();
 
-	private void reverseBet(PokerAction lastAction) {
-		removeFromPot(getValueOfAggressive(lastAction));
-	}
-	
-	
+            if (lastAction.getActionType().equals("b")) {
+                reverseBet(lastAction);
+            } else if (lastAction.getActionType().equals("c")) {
+                reverseCall();
+            } else if (lastAction.getActionType().equals("ch")) {
+                reverseCheck();
+            } else if (lastAction.getActionType().equals("r")) {
+                reverseRaise(lastAction);
+            }
+        }
+        clearCachedValues();
+        currentPlayerIndex = history.getLastPlayer().getId();
+        super.reverseAction();
+    }
+
+    private void reverseRaise(PokerAction lastAction) {
+        removeFromPot(getValueOfCall() + getValueOfAggressive(lastAction));
+    }
+
+    private void reverseCheck() {
+        if (sequenceForAllPlayers.size() > 0 && sequenceForAllPlayers.get(sequenceForAllPlayers.size() - 1).getActionType().equals("ch"))
+            round--;
+    }
+
+    private void reverseCall() {
+        removeFromPot(getValueOfCall());
+        round--;
+    }
+
+    private void reverseBet(PokerAction lastAction) {
+        removeFromPot(getValueOfAggressive(lastAction));
+    }
+
 
 }
